# janus-like

./: .gitignore  CHANGELOG.md  Makefile  README.MD  janus-like.cabal
app/: AssertionRemoval.hs  AstReversing.hs  EvalExpr.hs  JapaToCpp.hs  Main.hs  Parser.hs  RenameProcedures.hs  Syntax.hs  TypeCheckAnnotate.hs
benchmarks/: HaskellBenchmark.hs  encryption.japa  factorial.japa  fib  fib-noOpt  fib-noOpt.cpp  fib-noOpt.s  fib.cpp  fib.japa  fib.s  fibn.japa  ow  perm-to-code-noOpt  perm-to-code-noOpt.cpp  perm-to-code.japa  run-length-encoder.japa  runbenchmark.sh
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
doc/: abstract.tex  appendice.tex  benchmark.tex  compiler.tex  conclusion.tex  introduction.tex  introduction.tex.aux  language.tex  main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.out  main.tex  main.toc  main.xdv  references.bib  reflection.tex  test.tex  theorem-prover.tex  web-interface.tex
goldFiles/: call-noOpt.gold  call.gold  factorial-no-overflow.gold  factorial-overflow.gold  fallacy-local.gold  fallacy.gold  fib.gold  for-for.gold  for-if.gold  for.gold  for2.gold  functioninline.gold  global.gold  if.gold  lists.gold  local-for.gold  local-if.gold  local-if2.gold  local-local.gold  local-mod.gold  local.gold  loop-zero.gold  noMainArgs.gold  not.gold  perm-to-code.gold  require_generalize.gold  require_generalize_unrollable.gold  simple-array-mod.gold  subtraction.gold  uncall-noOpt.gold  uncall.gold  unrollableLoop-invariant.gold  unrollableLoop.gold
src/: AssertionRemoval.hs  Compiler.hs  EvalExpr.hs  JapaToCpp.hs  NdimensionalLists.hs  Optimizer.hs  Parser.hs  RenameProcedure.hs  Supplyer.hs  Syntax.hi  Syntax.hs  Syntax2.hs  TypeCheckAnnotate.hs  optimizer-pseudo.md  test.hs
tests/: arrays.japa  call-noOpt.japa  call.japa  factorial-no-overflow.japa  factorial-overflow.japa  fallacy-local.japa  fallacy.japa  fib.japa  fibonacci.japa  for-for.japa  for-if.japa  for.japa  for.jappa  for2.japa  functioninline.japa  global.japa  if.japa  lists.japa  local-for.japa  local-if.japa  local-if2.japa  local-local.japa  local-mod.japa  local.japa  loop-zero.japa  noMainArgs.japa  not.japa  perm-to-code.japa  require_generalize.japa  require_generalize_unrollable.japa  simple-array-mod.japa  subtraction.japa  uncall-noOpt.japa  uncall.japa  unrollableLoop-invariant.japa  unrollableLoop.japa
web/: execute.php  index.html
web/examples/: factorial.japa  fib.japa  perm-to-code.japa
web/static/css/: playground.css
web/static/js/: playground.js
web/static/js/ace/: mode-janus.js
