cabal-version:      2.4
name:               janus-like
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             jonasreholt
maintainer:         jsf130@alumni.ku.dk

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.MD

executable janus-like
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    Syntax,
                      Parser,
                      AssertionRemoval,
                      AstReversing,
                      RenameProcedures

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0,
                      parsec,
                      pretty,
                      containers,
                      z3
    hs-source-dirs:   app
    default-language: Haskell2010
