cabal-version:      2.4
name:               janus-like
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             jonasreholt
maintainer:         jsf130@alumni.ku.dk

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.MD


library
    exposed-modules:    Compiler,
                        Syntax,
                        Parser,
                        AssertionRemoval,
                        AstReversing,
                        RenameProcedures,
                        TypeCheckAnnotate,
                        EvalExpr,
                        JapaToCpp,
                        RenameProcedure
    
    build-depends:      base ^>=4.14.3.0,
                        parsec,
                        pretty,
                        containers,
                        z3,
                        hashable

    hs-source-dirs:     src
    default-language:   Haskell2010


executable japa
    main-is:          Main.hs

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0,
                      janus-like
                     
    hs-source-dirs:   app
    default-language: Haskell2010

benchmark japa-benchmark
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmarks,
                       app
  main-is:             HaskellBenchmark.hs

  build-depends:       base ^>=4.14.3.0,
                       z3,
                       criterion,
                       janus-like



  default-language:    Haskell2010